--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.22",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-asset": "^2.1.1",
