--- a/app/package.json
+++ b/app/package.json
@@ -17,16 +17,20 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "deprecated-react-native-prop-types": "^5.0.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-asset": "^2.1.1",
     "react-native-camera": "^4.2.1",
+    "react-native-date-picker": "^5.0.2",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-pager-view": "^6.3.1",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.0.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0"
   },
